# leonhard

./: .gitignore  CMakeLists.txt  Makefile  README.md  euler
src/: CMakeLists.txt  Euler-3.cpp  euler-1.cpp  euler-2.cpp  p001.cpp  p002.cpp  p003.cpp  p004.cpp  p005.cpp  p006.cpp  p007.cpp
utils/: CircularList.h  LinkedList.h  Wheel.h  Wheel12357.h
